# ChangeLog for sys-libs/db
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.330 2012/09/24 00:31:53 vapier Exp $

  24 Sep 2012; Mike Frysinger <vapier@gentoo.org> db-4.2.52_p5-r1.ebuild,
  db-4.2.52_p5.ebuild, db-4.3.29_p1-r1.ebuild, db-4.3.29_p1.ebuild,
  db-4.4.20_p4-r1.ebuild, db-4.4.20_p4.ebuild, db-4.5.20_p2-r1.ebuild,
  db-4.5.20_p2.ebuild, db-4.6.21_p4.ebuild, db-4.7.25_p3.ebuild,
  db-4.7.25_p4.ebuild, metadata.xml:
  Make rpc support conditional #424838 by Kiichiro.

  29 May 2012; Richard Yao <ryao@gentoo.org> db-5.0.21-r1.ebuild,
  db-5.0.26.ebuild, db-5.0.32.ebuild, db-5.1.19-r2.ebuild, db-5.1.25.ebuild,
  db-5.1.29.ebuild, db-5.2.28.ebuild, db-5.2.36.ebuild:
  Rename __atomic_compare_exchange to avoid conflict with builtin, bug #417547,
  approved by Chainsaw in IRC

  29 May 2012; Richard Yao <ryao@gentoo.org>
  +files/db-4.8.30-rename-atomic-compare-exchange.patch, db-4.8.30.ebuild:
  Rename __atomic_compare_exchange to avoid conflict with builtin, bug #417547,
  Chainsaw approved

  24 May 2012; Mike Frysinger <vapier@gentoo.org> db-1.85-r3.ebuild,
  db-3.2.9_p2.ebuild, db-4.2.52_p5-r1.ebuild, db-4.2.52_p5.ebuild,
  db-4.3.29_p1-r1.ebuild, db-4.3.29_p1.ebuild, db-4.4.20_p4-r1.ebuild,
  db-4.4.20_p4.ebuild, db-4.5.20_p2-r1.ebuild, db-4.5.20_p2.ebuild,
  db-4.6.21_p4.ebuild, db-4.7.25_p3.ebuild, db-4.7.25_p4.ebuild,
  db-4.8.24.ebuild, db-4.8.26.ebuild, db-4.8.30.ebuild, db-5.0.21-r1.ebuild,
  db-5.0.26.ebuild, db-5.0.32.ebuild, db-5.1.19-r2.ebuild, db-5.1.25.ebuild,
  db-5.1.29.ebuild, db-5.2.28.ebuild, db-5.2.36.ebuild:
  Drop unused libtool inherit, and add missing multilib.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> db-4.8.30.ebuild:
  keyword ~amd64-fbsd

  03 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop pauldv from metadata as talked with him.

*db-5.1.29 (10 Feb 2012)
