@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/db
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.330 2012/09/24 00:31:53 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.331 2012/10/08 19:13:23 robbat2 Exp $
+
+*db-5.2.42 (08 Oct 2012)
+
+  08 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> +db-5.2.42.ebuild:
+  Version bump.
 
   24 Sep 2012; Mike Frysinger <vapier@gentoo.org> db-4.2.52_p5-r1.ebuild,
   db-4.2.52_p5.ebuild, db-4.3.29_p1-r1.ebuild, db-4.3.29_p1.ebuild,
